[css-grid] Get rid of AvailableSpaceType enum

The AvailableSpaceType enum was somehow duplicated with the
GridTrackSizing::SizingOperation one.
AvailableSpaceType was always AvailableSpaceIndefinite
when the SizingOperation is IntrinsicSizeComputation;
and the other way around, always AvailableSpaceDefinite
when the SizingOperation is TrackSizing.

So, we can get rid of AvailableSpaceType enum,
and only use SizingOperation to know if we're computing
or not the intrinsic sizes of the grid container.

No new tests, no change of behavior.

BUG=616716

Review-Url: https://codereview.chromium.org/2030803003
Cr-Commit-Position: refs/heads/master@{#397431}

Former-commit-id: 0582562513e9373d43f4ed2bbf9d644bb69347f5